--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,23 @@ next-env.d.ts
 # IDE
 .vscode
 .idea
+.cursor
 *.swp
 *.swo
 *~
+
+# OS
+Thumbs.db
+
+# Lock files (optional - uncomment if you want to ignore them)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Logs
+*.log
+
+# Temporary files
+.temp
+.tmp
+.cache
